--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Clock</p>
-                                            <p class="text-white-50 small m-0">Clock App for SDESKTOP.</p>
+                                            <p class="text-white-50 small m-0">Simple Clock App for SDESKTOP which shows the time.</p>
 											<hr>
 											<a href = "clock.html"><button>Open Clock</button></a>
 											<hr>
