php + JS required on web server

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col mr-2">
-                                            <div class="text-uppercase text-info font-weight-bold text-xs mb-1"><span>JAVASCRIPT SUPPORT</span></div>
+                                            <div class="text-uppercase text-info font-weight-bold text-xs mb-1"><span>JAVASCRIPT + PHP SUPPORT</span></div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
                                                     <div class="text-dark font-weight-bold h5 mb-0 mr-3"><span>REQUIRED</span></div>
