iframe removal + direct php through files added

--- a/codiad.html
+++ b/codiad.html
@@ -130,9 +130,7 @@
 
 
 
-<iframe src="/codiadide/index.php" width="200%" height="1000">
-
-</iframe>
+<a href = "/codiadide/index.php"><button></button></a>
 
 
 
