systeminfo bug fixed + button bug fixed

--- a/codiad.html
+++ b/codiad.html
@@ -130,7 +130,7 @@
 
 
 
-<a href = "/codiadide/index.php"><button></button></a>
+<a href = "/codiadide/index.php" target = _blank ><button>Open Codiad</button></a>
 
 
 
