--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">System Information</p>
                                             <p class="text-white-50 small m-0">View your web server information through PHP.</p>
                                             <hr>
-											<a href = "phpinfo.html"><button>Open System Info</button></a>
+											<a href = "phpinfo.php"><button>Open System Info</button></a>
 											<hr>
                                         </div>
                                     </div>
