--- a/upgrade.html
+++ b/upgrade.html
@@ -144,7 +144,7 @@
 <h4>If you are on Windows:
 <br />
 <h4>Open File Explorer, navigate to the www or public_html directory of your website, delete everything sDesktop related inside of it including the folder for sDesktop.
-<h4>Download the sDesktop zip file from the link below and then unzip/extract it</h4>
+<h4>Download the sDesktop zip file from the link below and then unzip/extract it inside your www or public_html folder of your website</h4>
 <a href = "https://github.com/Swivro/SDESKTOP/archive/master.zip" target = _blank><h5>https://github.com/Swivro/SDESKTOP/archive/master.zip</h5></a>
 <hr>
 <br />
