--- a/calc.html
+++ b/calc.html
@@ -128,165 +128,59 @@
                         <div class="col-lg-6 mb-4">
                             <div class="card shadow mb-4"><div class="card-body">
 
-<CENTER>
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<FORM name="Keypad" action="">
-<TABLE>
-<B>
-<TABLE border=2 width=50 height=60 cellpadding=1 cellspacing=5>
-<TR>
-<TD colspan=3 align=middle>
-<input name="ReadOut" type="Text" size=24 value="0" width=100%>
-</TD>
-<TD
-</TD>
-<TD>
-<input name="btnClear" type="Button" value="  C  " onclick="Clear()">
-</TD>
-<TD><input name="btnClearEntry" type="Button" value="  CE " onclick="ClearEntry()">
-</TD>
-</TR>
-<TR>
-<TD>
-<input name="btnSeven" type="Button" value="  7  " onclick="NumPressed(7)">
-</TD>
-<TD>
-<input name="btnEight" type="Button" value="  8  " onclick="NumPressed(8)">
-</TD>
-<TD>
-<input name="btnNine" type="Button" value="  9  " onclick="NumPressed(9)">
-</TD>
-<TD>
-</TD>
-<TD>
-<input name="btnNeg" type="Button" value=" +/- " onclick="Neg()">
-</TD>
-<TD>
-<input name="btnPercent" type="Button" value="  % " onclick="Percent()">
-</TD>
-</TR>
-<TR>
-<TD>
-<input name="btnFour" type="Button" value="  4  " onclick="NumPressed(4)">
-</TD>
-<TD>
-<input name="btnFive" type="Button" value="  5  " onclick="NumPressed(5)">
-</TD>
-<TD>
-<input name="btnSix" type="Button" value="  6  " onclick="NumPressed(6)">
-</TD>
-<TD>
-</TD>
-<TD align=middle><input name="btnPlus" type="Button" value="  +  " onclick="Operation('+')">
-</TD>
-<TD align=middle><input name="btnMinus" type="Button" value="   -   " onclick="Operation('-')">
-</TD>
-</TR>
-<TR>
-<TD>
-<input name="btnOne" type="Button" value="  1  " onclick="NumPressed(1)">
-</TD>
-<TD>
-<input name="btnTwo" type="Button" value="  2  " onclick="NumPressed(2)">
-</TD>
-<TD>
-<input name="btnThree" type="Button" value="  3  " onclick="NumPressed(3)">
-</TD>
-<TD>
-</TD>
-<TD align=middle><input name="btnMultiply" type="Button" value="  *  " onclick="Operation('*')">
-</TD>
-<TD align=middle><input name="btnDivide" type="Button" value="   /   " onclick="Operation('/')">
-</TD>
-</TR>
-<TR>
-<TD>
-<input name="btnZero" type="Button" value="  0  " onclick="NumPressed(0)">
-</TD>
-<TD>
-<input name="btnDecimal" type="Button" value="   .  " onclick="Decimal()">
-</TD>
-<TD colspan=3>
-</TD>
-<TD>
-<input name="btnEquals" type="Button" value="  =  " onclick="Operation('=')">
-</TD>
-</TR>
-</TABLE>
-</TABLE>
-</B>
-</FORM>
-</CENTER>
-<font face="Verdana, Arial, Helvetica" size=2>
-<SCRIPT LANGUAGE="JavaScript">
-<!-- Begin
-var FKeyPad = document.Keypad;
-var Accumulate = 0;
-var FlagNewNum = false;
-var PendingOp = "";
-function NumPressed (Num) {
-if (FlagNewNum) {
-FKeyPad.ReadOut.value  = Num;
-FlagNewNum = false;
-   }
-else {
-if (FKeyPad.ReadOut.value == "0")
-FKeyPad.ReadOut.value = Num;
-else
-FKeyPad.ReadOut.value += Num;
-   }
-}
-function Operation (Op) {
-var Readout = FKeyPad.ReadOut.value;
-if (FlagNewNum && PendingOp != "=");
-else
-{
-FlagNewNum = true;
-if ( '+' == PendingOp )
-Accumulate += parseFloat(Readout);
-else if ( '-' == PendingOp )
-Accumulate -= parseFloat(Readout);
-else if ( '/' == PendingOp )
-Accumulate /= parseFloat(Readout);
-else if ( '*' == PendingOp )
-Accumulate *= parseFloat(Readout);
-else
-Accumulate = parseFloat(Readout);
-FKeyPad.ReadOut.value = Accumulate;
-PendingOp = Op;
-   }
-}
-function Decimal () {
-var curReadOut = FKeyPad.ReadOut.value;
-if (FlagNewNum) {
-curReadOut = "0.";
-FlagNewNum = false;
-   }
-else
-{
-if (curReadOut.indexOf(".") == -1)
-curReadOut += ".";
-   }
-FKeyPad.ReadOut.value = curReadOut;
-}
-function ClearEntry () {
-FKeyPad.ReadOut.value = "0";
-FlagNewNum = true;
-}
-function Clear () {
-Accumulate = 0;
-PendingOp = "";
-ClearEntry();
-}
-function Neg () {
-FKeyPad.ReadOut.value = parseFloat(FKeyPad.ReadOut.value) * -1;
-}
-function Percent () {
-FKeyPad.ReadOut.value = (parseFloat(FKeyPad.ReadOut.value) / 100) * parseFloat(Accumulate);
-}
-
-</SCRIPT>
-
+<title>sCalc</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+ 
+<body>
+	<script>
+	function calcNumbers(result){
+		form.displayResult.value=form.displayResult.value+result;
+		
+	}
+	</script>
+	<div class="container">
+		<form name="form">
+		<div class="display">
+		<input type="text" placeholder="0" name="displayResult" />
+		</div>
+		<div class="buttons">
+	  <div class="row">
+		<input type="button" name="b7" value="7" onClick="calcNumbers(b7.value)">
+	  <input type="button" name="b8" value="8" onClick="calcNumbers(b8.value)">
+	  <input type="button" name="b9" value="9" onClick="calcNumbers(b9.value)">
+	  <input type="button" name="addb" value="+" onClick="calcNumbers(addb.value)">
+		</div>
+		
+		<div class="row">
+		<input type="button" name="b4" value="4" onClick="calcNumbers(b4.value)">
+	  <input type="button" name="b5" value="5" onClick="calcNumbers(b5.value)">
+	  <input type="button" name="b6" value="6" onClick="calcNumbers(b6.value)">
+	  <input type="button" name="subb" value="-" onClick="calcNumbers(subb.value)">
+		</div>
+		
+		<div class="row">
+		<input type="button" name="b1" value="1" onClick="calcNumbers(b1.value)">
+	  <input type="button" name="b2" value="2" onClick="calcNumbers(b2.value)">
+	  <input type="button" name="b3" value="3" onClick="calcNumbers(b3.value)">
+	  <input type="button" name="mulb" value="*" onClick="calcNumbers(mulb.value)">
+		</div>
+		
+		<div class="row">
+		<input type="button" name="b0" value="0" onClick="calcNumbers(b0.value)">
+	  <input type="button" name="potb" value="." onClick="calcNumbers(potb.value)">
+	  <input type="button" name="divb" value="/" onClick="calcNumbers(divb.value)">
+	  <input type="button" class="red" value="=" onClick="displayResult.value=eval(displayResult.value)">
+		</div>
+		</div>
+		<br />
+		<br />
+		<center><a href = "calc.html"><button>Reset</button></a></center>
+		</form>
+	</div>
+</body>
 
 
 </div></div>
