--- a/calc.html
+++ b/calc.html
@@ -184,44 +184,59 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <?php
-$dd=array(
-	'Server Address'=>$_SERVER['SERVER_ADDR'],
-	'Server Name'=>$_SERVER['SERVER_NAME'],
-	'Server Software'=>$_SERVER['SERVER_SOFTWARE'],
-	'Document Root'=>$_SERVER['DOCUMENT_ROOT'],
-	'HTTP Host'=>$_SERVER['HTTP_HOST'],
-	'Remote Address'=>$_SERVER['REMOTE_ADDR'],
-	'Remote Port'=>$_SERVER['REMOTE_PORT'],
-	'Script File Name'=>$_SERVER['SCRIPT_FILENAME'],
-	'Server Admin'=>$_SERVER['SERVER_ADMIN'],
-	'Serever Port'=>$_SERVER['SERVER_PORT'],
-	'Script Name'=>$_SERVER['SCRIPT_NAME'],
-	'Request URI'=>$_SERVER['REQUEST_URI'],	
-	'PHP Self'=>$_SERVER['PHP_SELF']
-);
-?>
-<table style="border: 1px solid #000000;width: 600px" align="center">
-	<tr>
-		<td style="font-family: 'Times New Roman', Times, serif;font-size: 17pt;text-align: center;width: 298px; color: #2214B9;border-style: solid;border-width: 1px;">
-		<strong>Name</strong></td>
-		<td style="font-family: 'Times New Roman', Times, serif;font-size: 17pt;text-align: center;color: #2214B9;border-style: solid;border-width: 1px; width: 298px;">
-		<strong>Value</strong></td>
-	</tr>
-<?php
-foreach ($dd as $key=>$value){
-?>
-	<tr>
-		<td style="font-family: 'Times New Roman', Times, serif;font-size: 15pt;text-align: left; width: 298px; color: #2214B9;border-style: solid;border-width: 1px;">
-		<?php echo $key?> </td>
-		<td style="font-family: 'Times New Roman', Times, serif;font-size: 15pt;text-align: left; color: #2214B9;border-style: solid;border-width: 1px; width: 298px;">
-		<?php echo $value?></td>
-	</tr>
-<?php } ?>
-</table>
-  </div>
+ <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<title>sCalc</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+ 
+<body>
+	<script>
+	function calcNumbers(result){
+		form.displayResult.value=form.displayResult.value+result;
+		
+	}
+	</script>
+	<div class="container">
+		<form name="form">
+		<div class="display">
+		<input type="text" placeholder="0" name="displayResult" />
+		</div>
+		<div class="buttons">
+	  <div class="row">
+		<input type="button" name="b7" value="7" onClick="calcNumbers(b7.value)">
+	  <input type="button" name="b8" value="8" onClick="calcNumbers(b8.value)">
+	  <input type="button" name="b9" value="9" onClick="calcNumbers(b9.value)">
+	  <input type="button" name="addb" value="+" onClick="calcNumbers(addb.value)">
+		</div>
+		
+		<div class="row">
+		<input type="button" name="b4" value="4" onClick="calcNumbers(b4.value)">
+	  <input type="button" name="b5" value="5" onClick="calcNumbers(b5.value)">
+	  <input type="button" name="b6" value="6" onClick="calcNumbers(b6.value)">
+	  <input type="button" name="subb" value="-" onClick="calcNumbers(subb.value)">
+		</div>
+		
+		<div class="row">
+		<input type="button" name="b1" value="1" onClick="calcNumbers(b1.value)">
+	  <input type="button" name="b2" value="2" onClick="calcNumbers(b2.value)">
+	  <input type="button" name="b3" value="3" onClick="calcNumbers(b3.value)">
+	  <input type="button" name="mulb" value="*" onClick="calcNumbers(mulb.value)">
+		</div>
+		
+		<div class="row">
+		<input type="button" name="b0" value="0" onClick="calcNumbers(b0.value)">
+	  <input type="button" name="potb" value="." onClick="calcNumbers(potb.value)">
+	  <input type="button" name="divb" value="/" onClick="calcNumbers(divb.value)">
+	  <input type="button" class="red" value="=" onClick="displayResult.value=eval(displayResult.value)">
+		</div>
+		</div>
+		<br />
+		<br />
+		<center><a href = "calc.html"><button>Reset</button></a></center>
+		</form>
+	</div>
+</body>
 
 </div>
 
