add HTMLy on left navbar

--- a/htmly.html
+++ b/htmly.html
@@ -20,7 +20,7 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                                       <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a><a class="nav-link active" href="grapejs/index.html"><i></i><span>GrapeJS</span></a><a class="nav-link active"
+                                        <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a><a class="nav-link active" href="grapejs/index.html"><i></i><span>GrapeJS</span></a><a class="nav-link active"
                             href="htmly.html"><i></i><span>HTMLy</span></a></li> 
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div><a href="index.html"></a></div>
@@ -56,7 +56,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                                              <h3 class="text-dark mb-0">Dashboard</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="index.html" target = _blank > Home</a></div>
+                                                <h3 class="text-dark mb-0">Dashboard</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="index.html" target = _blank > Home</a></div>
                     <div class="row">
                         <div class="col-md-6 col-xl-3 mb-4">
                             <div class="card shadow border-left-primary py-2">
@@ -128,94 +128,11 @@
                         <div class="col-lg-6 mb-4">
                             <div class="card shadow mb-4"><div class="card-body">
 
-<html> 
-<head> 
-	<script> 
-		//function that display value 
-		function dis(val) 
-		{ 
-			document.getElementById("result").value+=val 
-		} 
-		
-		//function that evaluates the digit and return result 
-		function solve() 
-		{ 
-			let x = document.getElementById("result").value 
-			let y = eval(x) 
-			document.getElementById("result").value = y 
-		} 
-		
-		//function that clear the display 
-		function clr() 
-		{ 
-			document.getElementById("result").value = "" 
-		} 
-	</script> 
-	<!-- for styling -->
-	<style> 
-		.title{ 
-		margin-bottom: 10px; 
-		text-align:center; 
-		width: 210px; 
-		color:green; 
-		border: solid black 2px; 
-		} 
 
-		input[type="button"] 
-		{ 
-		background-color:green; 
-		color: black; 
-		border: solid black 2px; 
-		width:100% 
-		} 
 
-		input[type="text"] 
-		{ 
-		background-color:white; 
-		border: solid black 2px; 
-		width:100% 
-		} 
-	</style> 
-</head> 
-<!-- create table -->
-<body> 
-	<div class = title >Calculator</div> 
-	<table border="1"> 
-		<tr> 
-			<td colspan="3"><input type="text" id="result"/></td> 
-			<!-- clr() function will call clr to clear all value -->
-			<td><input type="button" value="c" onclick="clr()"/> </td> 
-		</tr> 
-		<tr> 
-			<!-- create button and assign value to each button -->
-			<!-- dis("1") will call function dis to display value -->
-			<td><input type="button" value="1" onclick="dis('1')"/> </td> 
-			<td><input type="button" value="2" onclick="dis('2')"/> </td> 
-			<td><input type="button" value="3" onclick="dis('3')"/> </td> 
-			<td><input type="button" value="/" onclick="dis('/')"/> </td> 
-		</tr> 
-		<tr> 
-			<td><input type="button" value="4" onclick="dis('4')"/> </td> 
-			<td><input type="button" value="5" onclick="dis('5')"/> </td> 
-			<td><input type="button" value="6" onclick="dis('6')"/> </td> 
-			<td><input type="button" value="-" onclick="dis('-')"/> </td> 
-		</tr> 
-		<tr> 
-			<td><input type="button" value="7" onclick="dis('7')"/> </td> 
-			<td><input type="button" value="8" onclick="dis('8')"/> </td> 
-			<td><input type="button" value="9" onclick="dis('9')"/> </td> 
-			<td><input type="button" value="+" onclick="dis('+')"/> </td> 
-		</tr> 
-		<tr> 
-			<td><input type="button" value="." onclick="dis('.')"/> </td> 
-			<td><input type="button" value="0" onclick="dis('0')"/> </td> 
-			<!-- solve function call function solve to evaluate value -->
-			<td><input type="button" value="=" onclick="solve()"/> </td> 
-			<td><input type="button" value="*" onclick="dis('*')"/> </td> 
-		</tr> 
-	</table> 
-</body> 
-</html> 
+<h3>HTMLy CMS is coming to sDesktop soon!</h3>
+
+
 
 
 
