--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a><a class="nav-link active" href="grapejs/index.html"><i></i><span>GrapeJS</span></a><!--<a class="nav-link active"
-                            href="index.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li> !-->
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a><a class="nav-link active" href="grapejs/index.html"><i></i><span>GrapeJS</span></a><a class="nav-link active"
+                            href="htmly.html"><i></i><span>HTMLy</span></a></li> 
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div><a href="index.html"></a></div>
         </nav>
