--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Clock</p>
                                             <p class="text-white-50 small m-0">Simple Clock App for SDESKTOP which shows the time.</p>
 											<hr>
-											<a href = "clock.html"><button>Open Clock</button></a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="clock.html" target = _blank >  Open Clock</a>
 											<hr>
                                         </div>
                                     </div>
@@ -166,7 +166,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Calendar</p>
                                             <p class="text-white-50 small m-0">A simple calendar app for SDESKTOP that shows the date, month and year.</p>
 											<hr>
-											<a href = "calendar.html"><button>Open Calender</button></a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="calc.html" target = _blank >  Open Calendar</a>
 											<hr>
                                         </div>
                                     </div>
@@ -177,7 +177,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">System Information</p>
                                             <p class="text-white-50 small m-0">View your web server information through PHP.</p>
                                             <hr>
-											<a href = "phpinfo.php"><button>Open System Info</button></a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="phpinfo.php" target = _blank >  Open Information</a>
 											<hr>
                                         </div>
                                     </div>
@@ -188,7 +188,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Upgrade sDesktop</p>
                                             <p class="text-white-50 small m-0">Instructions on how to upgrade sDesktop</p>
                                             <hr>
-											<a href = "upgrade.html"><button>Open Instructions</button></a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="upgrade.html" target = _blank >  Open Instructions</a>
 											<hr>
                                         </div>
                                     </div>
@@ -199,7 +199,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Google Safe Search</p>
                                             <p class="text-white-50 small m-0">Search the web with Google Safe Search on SDESKTOP.</p>
                                             <hr>
-											<a href = "search.html"><button>Open Google Safe Search</button></a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="search.html" target = _blank >  Google Safe Search</a>
 											<hr>
                                         </div>
                                     </div>
