--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Clock</p>
                                             <p class="text-white-50 small m-0">Simple Clock App for SDESKTOP which shows the time.</p>
 											<hr>
-											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="clock.html" target = _blank >  Open Clock</a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="clock.html">  Open Clock</a>
 											<hr>
                                         </div>
                                     </div>
@@ -149,7 +149,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Calendar</p>
                                             <p class="text-white-50 small m-0">A simple calendar app for SDESKTOP that shows the date, month and year.</p>
 											<hr>
-											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="calendar.html" target = _blank >  Open Calendar</a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="calendar.html">  Open Calendar</a>
 											<hr>
                                         </div>
                                     </div>
@@ -160,7 +160,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">System Information</p>
                                             <p class="text-white-50 small m-0">View your web server information through PHP.</p>
                                             <hr>
-											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="phpinfo.php" target = _blank >  Open Information</a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="phpinfo.php">  Open Information</a>
 											<hr>
                                         </div>
                                     </div>
@@ -171,7 +171,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Upgrade sDesktop</p>
                                             <p class="text-white-50 small m-0">Instructions on how to upgrade sDesktop</p>
                                             <hr>
-											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="upgrade.html" target = _blank >  Open Instructions</a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="upgrade.html">  Open Instructions</a>
 											<hr>
                                         </div>
                                     </div>
@@ -182,7 +182,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                             <p class="m-0">Google Safe Search</p>
                                             <p class="text-white-50 small m-0">Search the web with Google Safe Search on SDESKTOP.</p>
                                             <hr>
-											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="search.html" target = _blank >  Google Safe Search</a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="search.html">  Google Safe Search</a>
 											<hr>
                                         </div>
                                     </div>
