Update index.html wording

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20
                                     <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">System Information</p>
-                                            <p class="text-white-50 small m-0">View your web server information through PHP.</p>
+                                            <p class="text-white-50 small m-0">View your website server information through PHP.</p>
                                             <hr>
 											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="phpinfo.php">  Open Information</a>
 											<hr>
