remove javascript encryption

--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
                     <div class="row">
                         <div class="col-lg-6 mb-4">
                             <div class="card shadow mb-4"><div class="card-body">
-    <script language="JavaScript" type="text/javascript">
-document.write(unescape('%3Ch3%3ESDESKTOP%20is%20a%20Virtual%20Desktop%20that%20you%20can%20view%20over%20your%20browser.%20%20It%20is%20completely%20free%20to%20use%20and%20it%20is%20still%20in%20development.%20%20SDESKTOP%20is%20managed%20by%20Kavorti.com%20and%20developed%20by%20Kavorti.com%3C/h3%3E'));
-</script>
+  <h3>SDESKTOP is a virtual desktop that you can view over your browser which uses HTML.  It is free to use and is constantly being developed.</h3>
 </div></div>
                             <div class="card shadow mb-4">
                                 <ul class="list-group list-group-flush"></ul>
