Update search.html + add google safe search text

--- a/search.html
+++ b/search.html
@@ -116,7 +116,9 @@
 <script async src="https://cse.google.com/cse.js?cx=014743578870303914774:dyugnib6dqk"></script>
 <div class="gcse-search"></div>
 
-
+<hr>
+<br />
+<center><p>Google Safe Search</p></center>
 
 
 
