change upgrade.html wording

--- a/upgrade.html
+++ b/upgrade.html
@@ -120,7 +120,7 @@
 <h4>If you are on Linux:</h4>
 <br />
 <h4>Navigate to the www directory or public_html directory of your website.</h4><br />
-<h4>If sDesktop is in a folder called SDESKTOP-master then type the following command outside the directory.</h4><br />
+<h4>If sDesktop is in a folder called SDESKTOP-master then type the following command outside the SDESKTOP-master directory.</h4><br />
 <h5>sudo rm -r SDESKTOP-master</h5><br />
 <h5>Next, run the command below to install the latest version of sDesktop</h5><br />
 <h5>sudo wget https://github.com/Swivro/SDESKTOP/archive/master.zip && sudo unzip master.zip && rm master.zip</h5><br />
