--- a/upgrade.html
+++ b/upgrade.html
@@ -119,6 +119,7 @@
 <br />
 <h4>If you are on Linux:</h4>
 <br />
+<h4>Login to your server through SSH with sudo permissions</h4><br />
 <h4>Navigate to the www directory or public_html directory of your website.</h4><br />
 <h4>If sDesktop is in a folder called SDESKTOP-master then type the following command outside the SDESKTOP-master directory.</h4><br />
 <h5>sudo rm -r SDESKTOP-master</h5><br />
