--- a/index.html
+++ b/index.html
@@ -185,6 +185,47 @@
                                         </div>
                                     </div>
                                 </div>
+								
+
+
+<html>
+<head>
+<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+</style>
+</head>
+<body>
+
+<hr>
+
+
+<div class="dropdown">
+  <a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="calendar.html">  More Tools/Apps</a>
+  <div class="dropdown-content">
+  <a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="">  Coming Soon</a>
+  </div>
+</div>
+</body>
+</html>
+
+								
                             </div>
                         </div>
                     </div>
