+Fix dashboard text bug

--- a/upgrade.html
+++ b/upgrade.html
@@ -39,7 +39,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                                              <h3 class="text-dark mb-0">Dashboard</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="index.html"> Home</a></div>
+                                              <h3 class="text-dark mb-0">Upgrade Page</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="index.html"> Home</a></div>
                     <div class="row">
                         <div class="col-md-6 col-xl-3 mb-4">
                             <div class="card shadow border-left-primary py-2">
@@ -114,26 +114,26 @@
 
 
 
-<h3>How to update sDesktop<h3>
-<hr>
-<br />
-<h4>If you are on Linux:</h4>
-<br />
-<h4>Login to your server through SSH with sudo permissions</h4><br />
-<h4>Navigate to the www directory or public_html directory of your website.</h4><br />
-<h4>If sDesktop is in a folder called SDESKTOP-master then type the following command outside the SDESKTOP-master directory.</h4><br />
-<h5>sudo rm -r SDESKTOP-master</h5><br />
-<h5>Next, run the command below to install the latest version of sDesktop</h5><br />
-<h5>sudo wget https://github.com/Swivro/SDESKTOP/archive/master.zip && sudo unzip master.zip && rm master.zip</h5><br />
-<hr>
-<br />
-<h4>If you are on Windows:
-<br />
-<h4>Open File Explorer, navigate to the www or public_html directory of your website, delete everything sDesktop related inside of it including the folder for sDesktop.
-<h4>Download the sDesktop zip file from the link below and then unzip/extract it inside your www or public_html folder of your website</h4>
-<a href = "https://github.com/Swivro/SDESKTOP/archive/master.zip" target = _blank><h5>https://github.com/Swivro/SDESKTOP/archive/master.zip</h5></a>
-<hr>
-<br />
+			<h3>How to update sDesktop<h3>
+		<hr>
+			<br />
+			<h4>If you are on Linux:</h4>
+		<br />
+			<h4>Login to your server through SSH with sudo permissions</h4><br />
+		<h4>Navigate to the www directory or public_html directory of your website.</h4><br />
+			<h4>If sDesktop is in a folder called SDESKTOP-master then type the following command outside the SDESKTOP-master directory.</h4><br />
+		<h5>sudo rm -r SDESKTOP-master</h5><br />
+			<h5>Next, run the command below to install the latest version of sDesktop</h5><br />
+		<h5>sudo wget https://github.com/Swivro/SDESKTOP/archive/master.zip && sudo unzip master.zip && rm master.zip</h5><br />
+			<hr>
+		<br />
+			<h4>If you are on Windows:
+		<br />
+			<h4>Open File Explorer, navigate to the www or public_html directory of your website, delete everything sDesktop related inside of it including the folder for sDesktop.
+		<h4>Download the sDesktop zip file from the link below and then unzip/extract it inside your www or public_html folder of your website</h4>
+			<a href = "https://github.com/Swivro/SDESKTOP/archive/master.zip" target = _blank><h5>https://github.com/Swivro/SDESKTOP/archive/master.zip</h5></a>
+		<hr>
+			<br />
 
 
 <div style="text-align: center">
