--- a/clock.html
+++ b/clock.html
@@ -39,7 +39,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                                                <h3 class="text-dark mb-0">Dashboard</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="index.html"  > Home</a></div>
+                                                <h3 class="text-dark mb-0">Clock Page</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="index.html"  > Home</a></div>
                     <div class="row">
                         <div class="col-md-6 col-xl-3 mb-4">
                             <div class="card shadow border-left-primary py-2">
