Update index.html + add github button

--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@
   <button class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="calendar.html">  More Tools/Apps</button>
   <div class="dropdown-content">
   <a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="timer.html">  5 Minute Timer</a>
+  <br />
   <a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="issues.html">  Report Issues</a>
+  <br />
+    <a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="https://github.com/Swivro/SDESKTOP" target = _blank >  SDESKTOP GitHub</a>
   </div>
 </div>
 </body>
