--- a/htmly.html
+++ b/htmly.html
@@ -113,7 +113,7 @@
 
 
 
-<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="htmly/installer.php" target = _blank >  Open HTMLy</a>
+<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="htmly/installer.php" target = _blank >  Open HTMLy App</a>
 
 
 
