modify grapejs demo text

--- a/grapejs/index.html
+++ b/grapejs/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="description">
           This is a demo content from index.html. For the development, you shouldn't edit this file, instead you can
-          copy and rename it to _index.html, on next server start the new file will be served, and it will be ignored by git.
+          copy and rename it to _index.html, on next server start the new file will be served, and it will be ignored by git.  This version of GrapeJS Is running through SDESKTOP.
         </div>
       </div>
       <style>
