--- a/issues.html
+++ b/issues.html
@@ -111,7 +111,7 @@
                         <div class="col-lg-6 mb-4">
                             <div class="card shadow mb-4"><div class="card-body">
 
-
+<h3>Report a issue below using the form</h3><br /><hr>
 <form action="https://formspree.io/xjvkbzvb" method="POST">
                     <div class="form-group"><label>Name</label><input class="form-control" type="text" name="Name"></div>
                     <div class="form-group"><label>Email</label><input class="form-control" type="email" name="_replyto"></div>
