--- a/calendar.html
+++ b/calendar.html
@@ -122,7 +122,56 @@ $(function(){
                         <div class="col-lg-6 mb-4">
                             <div class="card shadow mb-4"><div class="card-body">
 
+<SCRIPT 
 
+LANGUAGE="JavaScript">
+
+var timerID = null;
+var timerRunning = false;
+
+function stopclock ()
+{
+if(timerRunning)
+clearTimeout(timerID);
+timerRunning = false;
+}
+
+function showtime () 
+{
+var now = new Date();
+var hours = now.getHours();
+var minutes = now.getMinutes();
+var seconds = now.getSeconds()
+
+var timeValue = "" + ((hours >12) ? hours -12 :hours)
+timeValue += ((minutes < 10) ? ":0" : ":") + minutes
+timeValue += ((seconds < 10) ? ":0" : ":") + seconds
+timeValue += (hours >= 12) ? " P.M." : " A.M."
+document.clock.face.value = timeValue;
+
+// you could replace the above with this
+// and have a clock on the status bar:
+// window.status = timeValue;
+
+timerID = setTimeout("showtime()",1000);
+timerRunning = true;
+}
+
+function startclock () 
+{
+// Make sure the clock is stopped
+stopclock();
+showtime();
+}
+
+</SCRIPT>
+
+<BODY onLoad="startclock(); timerONE=window.setTimeout"
+
+TEXT="ffffff">
+
+<CENTER><form name="clock" onSubmit="0">
+<input type="text" name="face" size=13 value=""></CENTER><br />
 
 
 <head>
