update index.html information

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function includeHTML() {
                                     <div class="card text-white bg-primary shadow">
                                         <div class="card-body">
                                             <p class="m-0">Calculator</p>
-                                            <p class="text-white-50 small m-0">A simple calculator on SDESKTOP.</p>
+                                            <p class="text-white-50 small m-0">A simple Javascript Calculator web application ran through sDesktop.</p>
 											<hr>
 											<a href = "calc.html"><button>Open Calculator</button></a>
 											<hr>
@@ -162,10 +162,10 @@ function includeHTML() {
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
-                                            <p class="m-0">Clock</p>
-                                            <p class="text-white-50 small m-0">Simple Clock App for SDESKTOP which shows the time.</p>
+                                            <p class="m-0">Other Projects</p>
+                                            <p class="text-white-50 small m-0">sDesktop was created by Swivro.  Swivro makes lots of other projects, check out some of Swivro's other projects.</p>
 											<hr>
-											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="clock.html">  Open Clock</a>
+											<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="https://swivro.net" target = _blank >  See Projects</a>
 											<hr>
                                         </div>
                                     </div>
