--- a/htmly.html
+++ b/htmly.html
@@ -124,7 +124,7 @@ $(function(){
 
 
 
-<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="htmly/installer.php" target = _blank >  Open HTMLy App</a>
+<a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="/htmly/installer.php" target = "_blank" >  Open HTMLy App</a>
 
 
 
